fix layout shift

--- a/styles.css
+++ b/styles.css
@@ -214,8 +214,6 @@ img {
   top: 3.55rem;
   right: 0;
   width: 400px;
-  min-width: 368px;
-  max-width: 624px;
   height: calc(100vh - 4.64rem);
   background-color: transparent;
   z-index: 9999;
